Fixed the error message alignment issue in contact details

--- a/php/orangehrm/symfony/plugins/orangehrmPimPlugin/web/css/contactDetailsSuccess.css
+++ b/php/orangehrm/symfony/plugins/orangehrmPimPlugin/web/css/contactDetailsSuccess.css
@@ -41,6 +41,7 @@ form input.txtBoxSmall {
 
 label.error {
     display:block;
+    width: 220px !important;
 }
 
 br.clear1 {
